Lots of changes
More obstacles
Obstacles are spawned in randomly
Rotation of players is added
Collision tests of PhysicObjects now work properly
Small menu changes
Attempted to add zoom (doesn't work at all)
Drawing changes to player

--- a/static/index.html
+++ b/static/index.html
@@ -52,7 +52,7 @@
                 text-align: center;
             }
             #menu .text-input:focus {
-                border-color: rgba(0, 0, 0, 0.3);
+                border-color: rgba(0, 0, 0, 0.5);
             }
             
             #menu button {
@@ -99,7 +99,7 @@
                 <h1 class="title">Some Game</h1>
                 <h2 class="subtitle">A game that is some</h2>
 
-                <input type="text" class="text-input" id="name" placeholder="Username">
+                <input type="text" class="text-input" id="name" placeholder="Username" autofocus>
                 <br>
                 <button id="join">join</button>
             </div>
